# mc-player-v3

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  build.bat  mc-player_ADR.md  mc-player_架构设计文档_v3.0.md
demo-host/: CMakeLists.txt
demo-host/src/: main.cpp
doc/: hardware-decode-dependencies.md  mc-player_ADR.md  mc-player_capability_probe_设计.md  mc-player_hdcm_设计.md  mc-player_性能量度规范.md  mc-player_架构设计文档_v3.0.md
docs/: dxva_h264_花屏_排障手册.md  hardware-decode-dependencies.md  mc-player_ADR.md  mc-player_PTS_paced调度设计.md  mc-player_capability_probe_设计.md  mc-player_性能量度规范.md  mc-player_架构设计文档_v3.0.md
mc-player/: CMakeLists.txt
mc-player-ui-ux/: MC Player UI_UX.html  app.jsx  direction-c.jsx  player-body.jsx  player-shell.jsx  player-stages.jsx
mc-player/include/mc-player/: mc_player.h  mc_player_stats.h  mc_player_types.h
mc-player/src/app/: mc_player_api.cpp  mc_player_session.cpp  mc_player_session.h
mc-player/src/controller/: adapter_picker.cpp  adapter_picker.h  controller.cpp  controller.h  device_lost.cpp  device_lost.h
mc-player/src/hdcm/: detector.cpp  detector.h  installer_a_vendor_sdk.cpp  installer_a_vendor_sdk.h  installer_b_store.cpp  installer_b_store.h  installer_c_feature.cpp  installer_c_feature.h  installer_d_driver.cpp  installer_d_driver.h  manifest_table.cpp  manifest_table.h
mc-player/src/media/: audio_render_wasapi.cpp  audio_render_wasapi.h  av_sync.cpp  av_sync.h  codec_amf.cpp  codec_amf.h  codec_bridge.cpp  codec_bridge.h  codec_dxva_video.cpp  codec_dxva_video.h  codec_g711.cpp  codec_g711.h  codec_libcodec.cpp  codec_libcodec.h  codec_mft_audio.cpp  codec_mft_audio.h  codec_mft_video.cpp  codec_mft_video.h  codec_nvdec.cpp  codec_nvdec.h  codec_onevpl.cpp  codec_onevpl.h  codec_vendor_base.h  color_meta.cpp  color_meta.h  depack_aac.cpp  depack_aac.h  depack_h264.cpp  depack_h264.h  depack_h265.cpp  depack_h265.h  dxva_h264.cpp  dxva_h264.h  frame.h  frame_validity_gate.cpp  frame_validity_gate.h  jitter_buffer_audio.cpp  jitter_buffer_audio.h  jitter_buffer_video.cpp  jitter_buffer_video.h  (+14 more)
mc-player/src/pal/: cache_line.h  clock.cpp  clock.h  com_apartment.cpp  com_apartment.h  dxgi_caps_probe.cpp  dxgi_caps_probe.h  error.cpp  error.h  etw_provider.cpp  etw_provider.h  log.cpp  log.h  metric.cpp  metric.h  mf_runtime.cpp  mf_runtime.h  raii.h  socket_iocp.cpp  socket_iocp.h  spsc_queue.h  thread.cpp  thread.h
mc-player/src/preset/: live_reload.cpp  live_reload.h  oscillation_guard.cpp  oscillation_guard.h  preset_apply.cpp  preset_apply.h  preset_definitions.cpp  preset_definitions.h  preset_selector.cpp  preset_selector.h
mc-player/src/probe/: capability_snapshot.h  encoder_probe.cpp  encoder_probe.h  hardware_probe.cpp  hardware_probe.h  network_probe.cpp  network_probe.h  render_probe.cpp  render_probe.h
mc-player/src/transport/: rtcp.cpp  rtcp.h  rtp_packet.cpp  rtp_packet.h  rtsp_client.cpp  rtsp_client.h  rtsp_digest.cpp  rtsp_digest.h  rtsp_message.cpp  rtsp_message.h  sdp_parser.cpp  sdp_parser.h  transport_session.h  ts_rtsp_tcp.cpp  ts_rtsp_tcp.h  ts_rtsp_udp.cpp  ts_rtsp_udp.h
mc-player/tools/dump_stats/: CMakeLists.txt  main.cpp
plan/: mc-player_重构方案.md
subprojects/mc-libcodec/: CMakeLists.txt  LICENSE
subprojects/mc-libcodec/include/mc-libcodec/: mc_libcodec.h
subprojects/mc-libcodec/src/: api.cpp  bitstream.cpp  bitstream.h  cpu_features.cpp  cpu_features.h  decoder_h264.cpp  decoder_h264.h  decoder_h265.cpp  decoder_h265.h  dpb.cpp  dpb.h  hevc_parser.cpp  hevc_parser.h  hevc_syntax.h  nal.cpp  nal.h
